[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://MenuButtons/bk_menu.png" type="Texture" id=2]
[ext_resource path="res://MenuButtons/button_niveles.png" type="Texture" id=3]
[ext_resource path="res://MenuButtons/button_opciones.png" type="Texture" id=4]
[ext_resource path="res://MenuButtons/button_creditos.png" type="Texture" id=5]

[node name="Main_menu" type="CanvasLayer"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_vertical_guides_": [ 199.05, 439.115 ]
}

[node name="Main" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Container" type="Container" parent="Main" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 361.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="background" type="Sprite" parent="Main/Container" index="0"]

position = Vector2( 319.5, 180.419 )
scale = Vector2( 1.04677, 1.04677 )
texture = ExtResource( 2 )

[node name="Btn_selectlvl" type="Button" parent="Main/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 190.0
margin_top = 104.0
margin_right = 1852.0
margin_bottom = 589.0
rect_scale = Vector2( 0.155, 0.155 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 3 )
flat = true
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Btn_options" type="Button" parent="Main/Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 190.0
margin_top = 186.0
margin_right = 1852.0
margin_bottom = 671.0
rect_scale = Vector2( 0.155, 0.155 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = true
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Btn_creditos" type="Button" parent="Main/Container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 190.0
margin_top = 268.0
margin_right = 1911.0
margin_bottom = 779.0
rect_scale = Vector2( 0.155, 0.155 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = true
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="Main/Container/Btn_selectlvl" to="Main" method="_on_Btn_selectlvl_pressed"]

[connection signal="pressed" from="Main/Container/Btn_options" to="Main" method="_on_Btn_options_pressed"]

[connection signal="pressed" from="Main/Container/Btn_creditos" to="Main" method="_on_Btn_creditos_pressed"]


